# DigImProc

./: CMakeLists.txt  README.md
data/: pbmlib.ascii_down.ppm
src/: CMakeLists.txt  image.cpp  image.h  main.cpp
